--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pathfind",
-  "homepage": "https://tarunmnc26.github.io/pathfinder",
+  "homepage": "https://saurabh7642.github.io/pathfinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
